Issue #12 Add some support for contexts per quote Fix quote overflow

--- a/app/assets/stylesheets/quotes.scss
+++ b/app/assets/stylesheets/quotes.scss
@@ -26,6 +26,7 @@
 
  .quote-box {
    text-align: center;
+   overflow-x: auto;
  }
 
  .quote {
@@ -156,4 +157,21 @@
 
 .filter-val {
   margin-right: 10px;
+}
+
+.quote-table {
+  width: 100%;
+}
+
+.quote-col {
+  padding: 0 10px 5px 10px;
+}
+
+.quote-col.left {
+  text-align: right;
+  width: 20%;
+}
+
+.quote-col.right {
+  text-align: center;
 }
